# backmap_legacy

./: .ccls  .clang-format  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
examples/alk/: convert.sh  dodecane.00000000  molc01.dump
examples/alk/beads/: align1_alk.xyz  align2_alk.xyz  align3_alk.xyz
examples/backmap_example/: but_s01_04.last.dump  convert1.sh
examples/backmap_example/beads/: alk1_align.xyz  alk2_align.xyz
examples/carl/: fix.sh  fix2.sh  npb_substrate.dump  npb_substrate.orig  reversemap.sh
examples/carl/npb/: align1_bin.xyz  align2_naph.xyz  align3_phe.xyz
examples/water/: 01_water_cg.dump  01_water_cg_f55000.dump  run.sh
include/: atom.h  dump.h  dump_atom_fields.h  dump_parse.h  dump_parse_ctxt.h  dump_parse_on_the_fly.h  dump_sections.h  file_utils.h  fragment.h  particle.h  particle_transform.h  quat_utils.h  string_utils.h  usage.h  verbose.h
m4/: ax_gcc_version.m4
scripts/: pdb_average.pl
src/: .dir-locals.el  Makefile  Makefile.am  Makefile.in  backmap  backmap.c
src/.deps/: backmap-backmap.Po  backmap-trie.Po
